<resources>
    <string name="app_name">Biblioteca</string>
    <string name="invalid_nome">Devi inserire il nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_hint">Nome</string>
    <string name="cognome_hint">Cognome</string>
    <string name="cf_hint">Codice Fiscale</string>
    <string name="datan_hint">Data Nascita</string>
    <string name="mail_hint">Mail</string>
    <string name="pass_hint">Password</string>
    <string name="reg_text">Registrati</string>
    <string name="ins_email_hint">Inserisci l\'email...</string>
    <string name="ins_pass_hint">Inserisci la password...</string>
    <string name="pass_dim_tv">Password Dimenticata?</string>
    <string name="accedi_text">Accedi</string>
    <string name="mail_vuota">La mail non deve essere vuota</string>
    <string name="pass_vuota">La password non deve essere vuota</string>
    <string name="campi_vuoti">I campi devono essere tutti completi</string>
    <string name="nome_vuoto">Il nome non deve essere vuoto</string>
    <string name="cognome_vuoto">Il cognome non deve essere vuoto</string>
    <string name="codf_vuoto">Il codice fiscale non deve essere vuoto</string>
    <string name="datan_vuota">La data di nascita non deve essere vuota</string>
    <string name="vermail_text">Verifica la tua email</string>
    <string name="regeff_text">Registrazione effettuata con successo</string>
    <string name="reginv_text">Registrazione non andata a buon fine a causa di</string>
    <string name="respass_text">Inserisci l\'indirizzo email associato al tuo account e ti invieremo un link per cambiare la password.</string>
    <string name="continua_text">Continua</string>
    <string name="noaccount_text">Non hai un account? Registrati</string>
    <string name="inviomail_text">Ti abbiamo inviato un email per il cambio password!</string>
    <string name="home_bar">Home</string>
    <string name="inseriscilibro_bar">Inserisci libro</string>
    <string name="gestb_bar">Gestione Biblioteca</string>
    <string name="prof_bar">Profilo</string>
    <string name="cerca_bar">Cerca</string>
    <string name="prest_bar">Prestiti</string>
    <string name="titolo_text">"Titolo: "</string>
    <string name="autore_text">"Autore: "</string>
    <string name="genere_text">"Genere: "</string>
    <string name="descrizione_text">"Descrizione: "</string>
    <string name="disp_text">"Disponibilità: "</string>
    <string name="aggprestito_text">Aggiungi ai prestiti</string>
    <string name="utente_text">"Utente: "</string>
    <string name="stato_text">"Stato: "</string>
    <string name="isbn_text">ISBN</string>
    <string name="titolo_etext">Titolo</string>
    <string name="autore_etext">Autore</string>
    <string name="genere_etext">Genere</string>
    <string name="descr_etext">Descrizione</string>
    <string name="disp_etext">Disponibilità</string>
    <string name="inscop_text">Inserisci copertina</string>
    <string name="agglib_text">Aggiungi</string>
    <string name="prestincorso_text">Prestito già in corso</string>
    <string name="prestagg_text">Prestito aggiunto</string>
    <string name="pubbl_text">"Pubblicazione: "</string>
    <string name="periodo_text">"Tipo Periodicità: "</string>
    <string name="attori_text">"Attori: "</string>
    <string name="regista_text">"Regista: "</string>
    <string name="art_text">"Artista: "</string>
    <string name="EtàMin_text">"Età Minima: "</string>
    <string name="EtàMax_text">"Età Massima: "</string>
    <string name="libro_text">libri</string>
    <string name="rivista_text">riviste</string>
    <string name="musica_text">musica</string>
    <string name="film_text">film</string>
    <string name="percorsi_text">percorsi di lettura</string>
    <string name="nome_text">"Nome: "</string>
    <string name="cognome_text">"Cognome: "</string>
    <string name="dn_text">"Data di Nascita: "</string>
    <string name="cf_text">"Codice Fiscale: "</string>
    <string name="email_text">"Email: "</string>
    <string name="artcolo_restituito_text">GIA\' RESTITUITO</string>
    <string name="rest_eff_text">Restituzione avvenuta correttamente</string>
    <string name="sel_img_text">Seleziona un\'immagine di profilo</string>
    <string name="err_car_img_text">Errore durante il caricamento dell\'immagine del profilo</string>
    <string name="img_corr_agg_text">Immagine del profilo aggiornata</string>
    <string name="er_agg_img_text">Errore durante l\'aggiornamento dell\'immagine del profilo</string>
</resources>