<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home_bar" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cerca"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/cerca_bar" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prestiti"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/prest_bar" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profilo"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/prof_bar" />
</menu>